Makefile: support compiling dtbo
Add BUILD_ARM64_DTC to configure the dtc binary to use that
overrides the default dtc at scripts/dtc/dtc. Also add
BUILD_ARM64_DTC_FLAGS to allow configuring extra dtc flags.

Add Makefile rules to build .dtbo targets.

Bug:37099957
Change-Id: I983d3cfe3d2d3263b4e4e666c00b0d8c74a3499b
Signed-off-by: Yueyao Zhu <yueyao@google.com>
[yaro]: adjusted for CAF kernel and ported from 4.9
Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Signed-off-by: Panchajanya1999 <rsk52959@gmail.com>
Signed-off-by: Panchajanya1999 <panchajanya@azure-dev.live>
Signed-off-by: Udit Karode <udit.karode@gmail.com>

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -238,6 +238,8 @@ Image.gz-dtb: vmlinux scripts dtbs Image.gz
 dtbo.img: $(boot)/dts/dtboimg.cfg dtbs
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
+all:	$(KBUILD_DTBS) $(KBUILD_TARGET)
+
 PHONY += vdso_install
 vdso_install:
 	$(Q)$(MAKE) $(build)=arch/arm64/kernel/vdso $@
