arch/arm64: build sm6150-idp dts only
We don't need any other shit that QCOM compiles by default.

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Signed-off-by: Panchajanya1999 <rsk52959@gmail.com>
Signed-off-by: Panchajanya1999 <panchajanya@azure-dev.live>
Signed-off-by: Udit Karode <udit.karode@gmail.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -1,12 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0
-dtb-$(CONFIG_ARCH_QCOM)	+= apq8016-sbc.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= apq8096-db820c.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= ipq8074-hk01.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8916-mtp.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8992-bullhead-rev-101.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8994-angler-rev-101.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-mtp.dtb
-
 dtb-$(CONFIG_ARCH_QCS403) += qcs403-iot-sku1.dtb \
 			qcs403-iot-sku3.dtb \
 			qcs403-iot-sku5.dtb \
@@ -124,6 +116,18 @@ dtb-$(CONFIG_ARCH_SDMSHRIKE)	+= sdmshrike-rumi.dtb \
 	sa8195p-adp-star.dtb
 endif
 
+ifeq ($(CONFIG_ARCH_XIAOMI_SM6150),y)
+ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
+       dtbo-$(CONFIG_ARCH_SM6150) += \
+               sm6150-idp-overlay.dtbo
+
+sm6150-idp-overlay.dtbo-base := sm6150.dtb
+else
+dtb-$(CONFIG_ARCH_SM6150)      += sm6150-idp.dtb
+endif
+endif
+
+ifeq ($(CONFIG_ARCH_XIAOMI_SM6150),n)
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 	dtbo-$(CONFIG_ARCH_SM6150) += \
 		sm6150-rumi-overlay.dtbo \
@@ -180,6 +184,7 @@ dtb-$(CONFIG_ARCH_SM6150)	+= sm6150-rumi.dtb \
 	qcs610-iot.dtb \
 	qcs410-iot.dtb
 
+endif
 endif
 
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
