dtsi: Re-add ramoops and re-enable pstore
Signed-off-by: Panchajanya1999 <panchajanya@azure-dev.live>
Signed-off-by: Udit Karode <udit.karode@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm6150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150.dtsi
@@ -599,6 +599,13 @@
 			reg = <0x0 0x9f800000 0x0 0x1e00000>;
 		};
 
+		ramoops_region: ramoops_region@0xa1600000 {
+			compatible = "ramoops";
+			reg = <0 0xa1600000 0 0x400000>;
+			console-size = <0x200000>;
+			pmsg-size = <0x200000>;
+		};
+
 		adsp_mem: adsp_region {
 			compatible = "shared-dma-pool";
 			alloc-ranges = <0 0x00000000 0 0xffffffff>;
